--- a/Ex2/PAG/experiencias.html
+++ b/Ex2/PAG/experiencias.html
@@ -4,95 +4,117 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiências | Quinta do Boição</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
 
-    <nav class="navbar navbar-dark bg-dark fixed-top py-3">
-        <div class="container">
+<body class="pt-5">
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-dark bg-dark fixed-top">
+        <div class="container py-3">
             <a class="navbar-brand fw-bold" href="../index.html">QUINTA DO BOIÇÃO</a>
-            <div class="d-flex gap-3 ms-auto">
-                <a class="nav-link text-white-50 px-2" href="../index.html">Início</a>
-                <a class="nav-link text-white-50 px-2" href="vinhos.html">Vinhos</a>
-                <a class="nav-link text-white px-2" href="experiencias.html">Experiências</a>
+            <div class="d-flex gap-3">
+                <a class="nav-link text-white-50" href="../index.html">Início</a>
+                <a class="nav-link text-white-50" href="vinhos.html">Vinhos</a>
+                <a class="nav-link text-white" href="experiencias.html">Experiências</a>
             </div>
         </div>
     </nav>
 
-    <main class="container mt-5">
+    <main class="container mt-5 pt-4">
+        
         <h2 class="text-center mb-5">Viva uma experiência única</h2>
         
+        <!-- Experiências -->
         <div class="row g-4 mb-5">
             <!-- Card 1 -->
             <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm card-hover">
+                <div class="card h-100 shadow-sm d-flex flex-column">
                     <img src="../img/prova-vinhos.jpg" class="card-img-top" alt="Prova de Vinhos">
-                    <div class="card-body text-center">
+                    <div class="card-body text-center d-flex flex-column">
                         <h5 class="card-title">Prova de Vinhos</h5>
-                        <p class="card-text">Deguste os nossos melhores vinhos de Bucelas acompanhados por queijos e enchidos da região.</p>
-                        <p class="text-muted"><strong>25€ / pessoa</strong></p>
-                        <p class="small">Duração: 1h30</p>
-                        <a href="#" class="btn btn-dark w-100">Reservar</a>
+                        <p class="card-text flex-grow-1">Deguste os nossos melhores vinhos de Bucelas acompanhados por queijos e enchidos da região.</p>
+                        <div>
+                            <p class="text-muted"><strong>25€ / pessoa</strong></p>
+                            <p class="small">Duração: 1h30</p>
+                            <a href="#" class="btn btn-dark w-100">Reservar</a>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <!-- Card 2 -->
             <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm card-hover">
+                <div class="card h-100 shadow-sm d-flex flex-column">
                     <img src="../img/visita-vinhas.jpg" class="card-img-top" alt="Visita às Vinhas">
-                    <div class="card-body text-center">
+                    <div class="card-body text-center d-flex flex-column">
                         <h5 class="card-title">Visita às Vinhas</h5>
-                        <p class="card-text">Passeio guiado pelas vinhas centenárias de Arinto com explicação do processo de produção.</p>
-                        <p class="text-muted"><strong>15€ / pessoa</strong></p>
-                        <p class="small">Duração: 1h</p>
-                        <a href="#" class="btn btn-dark w-100">Reservar</a>
+                        <p class="card-text flex-grow-1">Passeio guiado pelas vinhas centenárias de Arinto com explicação do processo de produção.</p>
+                        <div>
+                            <p class="text-muted"><strong>15€ / pessoa</strong></p>
+                            <p class="small">Duração: 1h</p>
+                            <a href="#" class="btn btn-dark w-100">Reservar</a>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <!-- Card 3 -->
             <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm card-hover">
+                <div class="card h-100 shadow-sm d-flex flex-column">
                     <img src="../img/workshop-vindima.jpg" class="card-img-top" alt="Workshop Vindima">
-                    <div class="card-body text-center">
+                    <div class="card-body text-center d-flex flex-column">
                         <h5 class="card-title">Workshop Vindima</h5>
-                        <p class="card-text">Participe na colheita das uvas e aprenda todo o processo tradicional de vindima em Bucelas.</p>
-                        <p class="text-muted"><strong>40€ / pessoa</strong></p>
-                        <p class="small">Duração: 3h</p>
-                        <a href="#" class="btn btn-dark w-100">Reservar</a>
+                        <p class="card-text flex-grow-1">Participe na colheita das uvas e aprenda todo o processo tradicional de vindima em Bucelas.</p>
+                        <div>
+                            <p class="text-muted"><strong>40€ / pessoa</strong></p>
+                            <p class="small">Duração: 3h</p>
+                            <a href="#" class="btn btn-dark w-100">Reservar</a>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <!-- Card 4 -->
             <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm card-hover">
+                <div class="card h-100 shadow-sm d-flex flex-column">
                     <img src="../img/jantar-quinta.jpg" class="card-img-top" alt="Jantar na Quinta">
-                    <div class="card-body text-center">
+                    <div class="card-body text-center d-flex flex-column">
                         <h5 class="card-title">Jantar na Quinta</h5>
-                        <p class="card-text">Menu tradicional português harmonizado com os vinhos da Quinta do Boição.</p>
-                        <p class="text-muted"><strong>60€ / pessoa</strong></p>
-                        <p class="small">Duração: 2h30</p>
-                        <a href="#" class="btn btn-dark w-100">Reservar</a>
+                        <p class="card-text flex-grow-1">Menu tradicional português harmonizado com os vinhos da Quinta do Boição.</p>
+                        <div>
+                            <p class="text-muted"><strong>60€ / pessoa</strong></p>
+                            <p class="small">Duração: 2h30</p>
+                            <a href="#" class="btn btn-dark w-100">Reservar</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="row mt-5">
-            <div class="col-12 text-center">
-                <h4 class="mb-3">Reserve a sua experiência</h4>
-                <p class="lead">Contacte-nos para mais informações e disponibilidade</p>
-                <p><strong>Email:</strong> visitas@quintaboicao.pt | <strong>Telefone:</strong> +351 123 456 789</p>
-            </div>
+        <!-- Contactos -->
+        <div class="text-center mt-5">
+            <h4 class="mb-3">Reserve a sua experiência</h4>
+            <p class="lead">Contacte-nos para mais informações e disponibilidade</p>
+            <p><strong>Email:</strong> visitas@quintaboicao.pt | <strong>Telefone:</strong> +351 123 456 789</p>
         </div>
     </main>
 
-    <footer class="py-4 border-top mt-5 bg-light text-center">
+    <!-- Footer -->
+    <footer class="py-4 border-top bg-light mt-5">
         <div class="container">
-            <p class="text-muted mb-0">Quinta do Boição 2026 - Exercício 2 Bootstrap</p>
+            <div class="row align-items-center">
+                <div class="col-md-6 text-center text-md-start">
+                    <p class="text-muted mb-0">Quinta do Boição 2026 - Exercício 2 Bootstrap</p>
+                </div>
+                <div class="col-md-6 text-center text-md-end mt-3 mt-md-0">
+                    <a href="#" class="text-dark me-3 fs-4"><i class="bi bi-facebook"></i></a>
+                    <a href="#" class="text-dark me-3 fs-4"><i class="bi bi-instagram"></i></a>
+                    <a href="#" class="text-dark fs-4"><i class="bi bi-whatsapp"></i></a>
+                </div>
+            </div>
         </div>
     </footer>
 
